# metal

./: .gitignore  CMakeLists.txt  README.md  metal-v0.0.1-linux  metal-v0.0.1-pico.uf2  metal-v0.0.1-zero  pico  term  windows  zero
include/: array.h  cell.h  compat.h  context.h  core.h  debug.h  dictionary.h  error.h  interpreter.h  line_editor.h  memory.h  metal.h  parser.h  repl.h  stack.h  test.h  tools.h  util.h
platform/host/src/: key_input.c
platform/pico/src/: key_input.c
platform/windows/src/: key_input.c
src/: array.c  cell.c  context.c  core.c  debug.c  dictionary.c  error.c  interpreter.c  line_editor.c  main.c  memory.c  parser.c  repl.c  stack.c  test.c  tools.c  util.c
